# verdictum

./: .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  FACTORY_PATTERN_CURRENT.md  IMPLEMENTATION_STATUS.md  JUDICIAL_FEATURES.md  MIGRATION_FINAL_REPORT.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MULTI_TENANT_ARCHITECTURE.md  README.md  REPOSITORY_PATTERN_EXPLAINED.md  SPIN_TEST_PATTERNS.md  TEST_ANALYSIS.md  TEST_IMPROVEMENT_SUMMARY.md  TEST_PLAN.md  TEST_STRATEGY.md  add_headers.sh  batch-test.json  cloud-config.toml  current_test_results.txt  dev-config.toml  dev.sh  fake_terms_of_service.txt  final_api_improvement_test_results.txt  final_fix.sh  final_test_results.txt  fix_all_repos.sh  fix_commas.sh  fix_remaining_test_issues.py  fix_repo_calls.sh  fix_repo_errors.py  fix_test_data.py  fix_url_handlers.py  fix_url_handlers_final.py  fix_url_handlers_v2.py  fix_url_handlers_v3.py  fix_url_wrappers.sh  insomnia-collection-complete.json  (+26 more)
config/: base_defaults.toml
config/courts/: appellate.toml  bankruptcy.toml  district.toml  fisa.toml  tax.toml
config/districts/: EDTX.toml  SDNY.toml
docs/: rulesengine.md
src/: error.rs  lib.rs  macros.rs
src/adapters/: deadline_engine_impl.rs  mod.rs  pdf_writer_adapter.rs  privacy_engine_impl.rs  rule_loader.rs  rules_engine_impl.rs  spin_kv_attorney_repository.rs  spin_kv_case_repository.rs  spin_kv_config_repository.rs  spin_kv_deadline_repository.rs  spin_kv_docket_repository.rs  spin_kv_document_repository.rs  spin_kv_judge_repository.rs  spin_kv_rules_repository.rs  spin_kv_sentencing_repository.rs  spin_kv_signature_repository.rs  store_utils.rs  toml_config_loader.rs  unified_config_feature_repository.rs
src/domain/: attorney.rs  attorney_case.rs  attorney_conflict.rs  common.rs  config.rs  criminal_case.rs  deadline.rs  deadline_calc.rs  defendant.rs  docket.rs  document.rs  features.rs  filing_pipeline.rs  judge.rs  (+10 more)
tests/: Cargo.toml  config-test.py
tests/src/: judge_tests.rs  lib.rs  migration_tests.rs
tests/src/attorney/: attorney_case_tests.rs  conflict_check_tests.rs  create_attorney.rs  delete_attorney.rs  get_attorney_by_id.rs  list_attorneys.rs  mod.rs  pagination_tests.rs  representation_history_tests.rs  search_attorneys.rs  update_attorney.rs
tests/src/case/: case_operations.rs  court_events.rs  create_case.rs  delete_case.rs  docket_entries.rs  evidence.rs  get_case.rs  mod.rs  motions.rs  sealed_cases.rs  search_cases.rs  speedy_trial.rs  update_case.rs  victims.rs
tests/src/deadline/: frcp_calculate.rs  mod.rs
tests/src/filing/: deadline_chain.rs  mod.rs  submit_filing.rs
tests/src/monitoring/: health_check.rs  mod.rs
tests/src/rules/: create_rule.rs  delete_rule.rs  evaluate_rules.rs  get_rule.rs  mod.rs  query_rules.rs  update_rule.rs  url_routes.rs
(+66 files in other folders)
