[package]
name = "config-tests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
spin-test-sdk = { git = "https://github.com/fermyon/spin-test", branch = "main", version = "0.1.0" }
spin-sdk = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]
